# python-projects-portfolio

./: .gitignore  README.md  autobuilder.py  autobuilder_async_fastapi.py  autobuilder_auth_fastapi.py  autobuilder_tests_fastapi.py  autobuilder_v2.py  ef8d1440-6158-4d2f-90cf-324f174065ca.pptx
01-Projetos-Simples/sistema-bancario-POO/: README.md  sistema-POO.py
fastAPI/async-blog-api/: README.md  SECURITY_REPORT.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
fastAPI/async-blog-api/crud/: __init__.py  posts.py  users.py
fastAPI/async-blog-api/middleware/: __init__.py  security.py
fastAPI/async-blog-api/routers/: __init__.py  posts.py  users.py
fastAPI/async-blog-api/tests/: conftest.py  test_posts.py  test_users.py
fastAPI/db-api/: README.md  boas_praticas.py  database.py  main.py  posts.py  row_factory_demo.py  schema.py  seed.py  transacoes.py  usuarios.py
fastAPI/dio-blog/: .coveragerc  README.md  SECURITY_REPORT.md  conftest_check.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.sh
fastAPI/dio-blog/app/: main.py
fastAPI/dio-blog/app/routers/: posts.py
fastAPI/dio-blog/app/schemas/: post.py
fastAPI/dio-blog/routers/: posts.py
fastAPI/dio-blog/tests/: conftest.py  test_concurrent.py  test_database.py  test_routes.py  test_security.py  test_unit.py
fastAPI/fastapi-auth/: README.md  SECURITY_REPORT.md  config.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py
fastAPI/fastapi-auth/middleware/: security.py
fastAPI/fastapi-auth/routers/: __init__.py  auth.py
fastAPI/fastapi-auth/services/: auth_service.py
fastAPI/fastapi-auth/tests/: conftest.py  test_auth.py
