[tool.poetry]
name = "async-blog-api"
version = "0.1.0"
description = "API RESTful assíncrona com FastAPI e SQLAlchemy — DIO Bootcamp"
authors = ["taissocout"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
